# ai-servis

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHECKS_FIXED_REPORT.md  CHECKS_STATUS_SUMMARY.md  CONSOLIDATION_AND_IMPROVEMENTS.md  DEVELOPMENT.md  FINAL_ACCOMPLISHMENTS_REPORT.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  IMPLEMENTATION_STATUS_REPORT.md  LICENSE  Návrh_ Modulární “Car AI Server” pro autoservisy (.md  ORCHESTRATOR_IMPLEMENTATION_SUMMARY.md  PROOF_CICD_INFRASTRUCTURE.md  PROOF_CODE_QUALITY.md  PROOF_DOCUMENTATION_FOUNDATION.md  PROOF_PERFORMANCE_BENCHMARKS.md  PR_SUMMARY.md  README-CICD.md  README-UNIVERSAL.md  README-VM-TESTING.md  README.md  SECURITY_FIXES_SUMMARY.md  TODO.md  WORK_COMPLETED_SUMMARY.md  aws-setup-commands.sh  bucket-policy.json  build_orchestrator.py  conanfile.py  conanfile.txt  config.json.example  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.pi-simulation.yml  docker-compose.universal.yml  docker-compose.yml  index.html  (+8 more)
.backups/exported-assets-20250830-220821/: README.md
.backups/exported-assets-20250830-221117/: TODO.md  mkdocs.yml
.cursor/rules/: OMS_Development_Guidelines.mdc  ai_team_framework.mdc  android-apk-build-testing.mdc  android-docker-build.mdc  android-gradle-migration.mdc  code-style.mdc  michal-ci-cd-rules.md  michal.mdc  pavel-architecture-rules.md  pavel.mdc  vojtech-implementation-rules.md  vojtech.mdc
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/codeql/: codeql-config.yml
.github/workflows/: android-build.yml  android.yml  build-and-deploy.yml  ci-cd-orchestration.yml  ci.yml  deploy-variants.yml  docs.yml  esp32-build.yml
TODO-master-list/: index.html
TODO-michal-ci-cd/: index.html
TODO-pavel-architecture/: index.html
TODO-vojtech-implementation/: index.html
ai-servis/: TODO.md
ai-servis-universal/: README.md
ai-servis-universal-proposal/: index.html
ai-servis-universal/containers/: docker-compose.yml
android/: Dockerfile  TEST_REPORT.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/tools/: build-in-docker.sh  test-apk.sh  test-in-docker.sh  validate-apk.sh
api/audio-assistant/: index.html
api/changelog/: index.html
api/communications/: index.html
api/home-automation/: index.html
api/maps-navigation/: index.html
api/overview/: index.html
api/security-anpr/: index.html
architecture/: index.html
architecture/diagrams/: index.html
architecture/overview/: index.html
build-release/conan/: CMakePresets.json  CURL-release-x86_64-data.cmake  CURLConfig.cmake  FindCURL.cmake  FindOpenSSL.cmake  FindZLIB.cmake  OpenSSL-release-x86_64-data.cmake  OpenSSLConfig.cmake  OpenSSLConfigVersion.cmake  ZLIB-release-x86_64-data.cmake  ZLIBConfig.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanbuildenv-release-x86_64.sh  deactivate_conanrun.sh  flatbuffers-config.cmake  jsoncpp-config.cmake  jsoncpp-release-x86_64-data.cmake  libgpiod-Target-release.cmake  libgpiod-config-version.cmake  libgpiod-config.cmake  libgpiod-release-x86_64-data.cmake  module-CURL-Target-release.cmake  module-CURL-release-x86_64-data.cmake  module-OpenSSL-release-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake  (+4 more)
ci-cd-setup/: index.html
conan-setup/: index.html
contracts/: ble-gatt.md  config.schema.json  events.md  topics.md
core-orchestrator-enhanced/: index.html
deployment/: index.html
docs/: TODO-master-list.md  TODO-michal-ci-cd.md  TODO-pavel-architecture.md  TODO-vojtech-implementation.md  ci-cd-setup.md  conan-setup.md  core-orchestrator-enhanced.md  index.md  troubleshooting.md  vm-testing-guide.md  wiring.md
exported-assets/: README.md  TODO-master-list.md  ai-servis-universal-proposal.md  apply-implementation.sh  architecture-diagrams.md  audio_assistant_mcp.py  core_orchestrator.py  docker-compose.dev.yml  github-actions-ci.yml  implementation-ready-summary.md
implementation-ready-summary/: index.html
mcp-cpp-bridge/: CMakeLists.txt  conanfile.py
mcp-cpp-bridge/include/mcp/core/: protocol.h  protocol.hpp  tinymcp_wrapper.h
mcp-cpp-bridge/include/mcp/server/: server.h  server.hpp
mcp-cpp-bridge/python/: mcp_cpp_bridge.cpp
mcp-cpp-bridge/src/core/: tinymcp_wrapper.cpp
modules/: mcp_framework.py
monitoring/: prometheus-automotive.yml
profiles/: linux-arm64  linux-release  linux-simulation  macos-release  windows-release
reports/: README.md  cicd-improvements.md  conflict-resolution.md  pr-resolution.md
scripts/: automotive-performance-test.py  build-hardware-server.sh  build_variant.py  check_and_update_certificates.py  deploy-automotive-ai.sh  deploy-universal.sh  dev-environment.sh  dev-setup.sh  docker-build-multiplatform.sh  docker-orchestration.sh  health-check.sh  performance-tests.sh  setup-tinymcp.sh  smoke-tests.sh  system-tests.sh  test-hardware-server.sh  validate-security-fixes.sh  vm-quick-test.sh  vm-test-setup.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/: .rules.mdc.kate-swp  AllInterfaces.h  FlatBuffersRequestReader.h  FlatBuffersRequestWriter.h  FlatBuffersResponseReader.h  FlatBuffersResponseWriter.cpp  HardwareControlServer.cpp  HardwareControlServer.h  HotReloadManager.h  IJob.h  IRequestReader.h  IResponse.h  IWriter.h  MessageQueueProcessor.h  TcpSocket.cpp  WebGrabClient.h  WebGrabServer.cpp  WebGrabServer.h  assignment-MQP-en.txt  assignment-VISITOR-en.txt  assignment-VISITOR.txt  integration_test.py  main_client.cpp  main_hardware_server.cpp  main_linux.cpp  main_server.cpp  todo.md  webgrab.fbs  webgrab_generated.h
src/MCPIntegration/MCPClient/: CMakeLists.txt
src/MCPIntegration/MCPClient/src/: MCPClientSimulator.cpp
src/hardware/: CMakeLists.txt
tests/: test_universal_system.py
troubleshooting/: index.html
vm-testing-guide/: index.html
wiring/: index.html
(+355 files in other folders)
